[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio",
    "fastapi",
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "langchain_neo4j",
    "langchain_huggingface",
    "langchain_community",
    "sentence-transformers",
    "neo4j",
    "numpy",
    "openai",
    "opentelemetry-api",
    "pydantic",
    "uvicorn",
    "pytest-asyncio",
    "pytest",
    "langchain_chroma",
    "chromadb",
    "pypdf",

]

[project.optional-dependencies]
dev = ["black", "flake8"]